2008-09-29  Chris Marrin  <cmarrin@apple.com>

Reviewed by Sam Weinig

        https://bugs.webkit.org/show_bug.cgi?id=20921
        -webkit-animation-timing-function: inside of keyframes is ignored

        Test: animations/keyframe-timing-functions.html

        * page/animation/AnimationBase.cpp:
        (WebCore::AnimationBase::progress):
        * page/animation/AnimationBase.h:
        * page/animation/ImplicitAnimation.cpp:
        (WebCore::ImplicitAnimation::animate):
        * page/animation/KeyframeAnimation.cpp:
        (WebCore::KeyframeAnimation::animate):


Canonical link: https://commits.webkit.org/29342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37074 268f45cc-cd09-0410-ab3c-d52691b4dbfc