WebCore/page/animation/AnimationBase.cpp
@@ -774,7 +774,7 @@ void AnimationBase::updatePlayState(bool run)
         updateStateMachine(run ? AnimationStateInputPlayStateRunnning : AnimationStateInputPlayStatePaused, -1);
 }
 
-double AnimationBase::progress(double scale, double offset) const
+double AnimationBase::progress(double scale, double offset, const TimingFunction* tf) const
 {
     if (preActive())
         return 0;
@@ -802,15 +802,18 @@ double AnimationBase::progress(double scale, double offset) const
 
     if (scale != 1 || offset)
         fractionalTime = (fractionalTime - offset) * scale;
+        
+    if (!tf)
+        tf = &m_animation->timingFunction();
 
-    if (m_animation->timingFunction().type() == LinearTimingFunction)
+    if (tf->type() == LinearTimingFunction)
         return fractionalTime;
 
     // Cubic bezier.
-    double result = solveCubicBezierFunction(m_animation->timingFunction().x1(),
-                                            m_animation->timingFunction().y1(),
-                                            m_animation->timingFunction().x2(),
-                                            m_animation->timingFunction().y2(),
+    double result = solveCubicBezierFunction(tf->x1(),
+                                            tf->y1(),
+                                            tf->x2(),
+                                            tf->y2(),
                                             fractionalTime, m_animation->duration());
     return result;
 }
